--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.0.1",
     "jest": "^29.6.4",
+    "jest-canvas-mock": "^2.5.2",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.6.4",
     "mini-css-extract-plugin": "^2.7.2",
